# fitboost-be

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: tests.yml
app/: main.py
